k8s/pgadmin.yaml
# Note: The pgadmin-secret will be created by Terraform using data from AWS Secrets Manager
# This secret should contain PGADMIN_DEFAULT_EMAIL and PGADMIN_DEFAULT_PASSWORD keys
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  namespace: devsu-app
  labels:
    app: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
      - name: pgadmin
        image: dpage/pgadmin4:latest
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
        livenessProbe:
          httpGet:
            path: /misc/ping
            port: 80
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /misc/ping
            port: 80
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 3
          successThreshold: 1
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
  namespace: devsu-app
  labels:
    app: pgadmin
spec:
  type: ClusterIP
  selector:
    app: pgadmin
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
